--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "moomak/facebook-graph-sdk": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0|~5.0|~6.0|~7.0|~8.0|~9.0",
+        "phpunit/phpunit": "~4.0|~5.0|~6.0|~7.0|~8.0|~9.0|~10.0",
         "mockery/mockery": "~0.9",
         "squizlabs/php_codesniffer": "~2.0"
     },
