--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
     ],
     "require": {
         "php": ">=8.0",
-        "illuminate/auth": "~9|~10.0",
-        "illuminate/config": "~9|~10.0",
-        "illuminate/database": "~9|~10.0",
-        "illuminate/routing": "~9|~10.0",
-        "illuminate/session": "~9|~10.0",
-        "illuminate/support": "~9|~10.0",
+        "illuminate/auth": "~9|~10.0|~11.0",
+        "illuminate/config": "~9|~10.0|~11.0",
+        "illuminate/database": "~9|~10.0|~11.0",
+        "illuminate/routing": "~9|~10.0|~11.0",
+        "illuminate/session": "~9|~10.0|~11.0",
+        "illuminate/support": "~9|~10.0|~11.0",
         "moomak/facebook-graph-sdk": "^1.1"
     },
     "require-dev": {
